# MandelbrotSetQt

./: CMakeLists.txt  Complex.cpp  Complex.h  README.md  mainwindow.cpp  mainwindow.h
